objects/Transaction_Summary__c.object
<CustomObject>
    <description>This is a summary of transaction records. Each record becomes a row in the finance export file (VSA-33).</description>
    <fields>
        <fullName>Account_Code_Formula__c</fullName>
        <description>Finance Export</description>
        <formula>IF( Group_ID__c == &apos;true&apos;  ,  &quot; &quot;,   Account_Code__c  )</formula>
        <label>Account Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <description>Finance Export</description>
        <label>Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Nominal_Code__c</fullName>
        <description>This is the Bank Nominal Code from the related opportunity (UUK-910)</description>
        <label>Bank Nominal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banking_Date__c</fullName>
        <description>The date that the opportunity was banked (UUK-910)</description>
        <inlineHelpText>The date that the opportunity was banked</inlineHelpText>
        <label>Banking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Code__c</fullName>
        <description>Finance Export</description>
        <label>Budget Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <description>The card type from the opportunity (UUK-910)</description>
        <inlineHelpText>The card type from the opportunity</inlineHelpText>
        <label>Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Code_Formula__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot;  , &quot; &quot;,  Control_Code__c)</formula>
        <label>Control Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Code__c</fullName>
        <description>Finance Export</description>
        <label>Control Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cr__c</fullName>
        <label>Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF( Group_ID__c == &apos;true&apos; , &quot;Export to Finance &quot; &amp; LPAD(TEXT(DAY( DATEVALUE(CreatedDate ) )), 2, &apos;0&apos; ) &amp; TEXT(MONTH ( DATEVALUE(CreatedDate ))) &amp; TEXT(YEAR ( DATEVALUE(CreatedDate ))) , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description_Formula__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot;  , &quot; &quot;,   Detailed_Description_as_Text__c )</formula>
        <label>Detailed Description Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description_as_Text__c</fullName>
        <label>Detailed Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Date__c</fullName>
        <formula>IF( Group_ID__c == &apos;true&apos; , LPAD(TEXT(DAY(  DATEVALUE(CreatedDate ) )), 2, &apos;0&apos; ) &amp; &quot;/&quot; &amp; TEXT(MONTH ( DATEVALUE(CreatedDate ))) &amp; &quot;/&quot; &amp; TEXT(YEAR ( DATEVALUE(CreatedDate ))),&quot; &quot; )</formula>
        <label>Doc Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot; , &quot;CBJN13&quot;, &quot; &quot;)</formula>
        <label>Doc Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dr__c</fullName>
        <formula>&quot; &quot;</formula>
        <label>Dr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency__c</fullName>
        <description>The emergency that is linked to the opportunity (UUK-910)</description>
        <inlineHelpText>The emergency that is linked to the opportunity via the campaign</inlineHelpText>
        <label>Emergency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Reference__c</fullName>
        <description>Finance Export</description>
        <label>Export Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Code__c</fullName>
        <description>This is the finance code from the summarised opportunities. This is only used for unit tests</description>
        <inlineHelpText>This is the finance code from the summarised opportunities</inlineHelpText>
        <label>Finance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Export_Income_Reference__c</fullName>
        <description>This is a reference that is based on the payment method and other opportunity information (UUK-910)</description>
        <inlineHelpText>This is a reference that is based on the payment method and other opportunity information</inlineHelpText>
        <label>Finance Export Income Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Export_Period__c</fullName>
        <label>Finance Export Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GcFE_Credit_Finance_Description__c</fullName>
        <description>Finance Description for Credits</description>
        <label>Finance Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GcFE_Debit_Finance_Description__c</fullName>
        <description>Finance description for Debits</description>
        <label>Finance Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>This is a text string that groups together transactions. This is normally defined in a formula field on the opportunity (UUK-910)</description>
        <inlineHelpText>This is a text string that groups together transactions. This is normally defined in a formula field on the opportunity</inlineHelpText>
        <label>Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Output__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot;  , &quot; &quot;,  &quot;I&quot;)</formula>
        <label>Input Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jnl_Header__c</fullName>
        <label>Jnl Header</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jnl_Type__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot; , &quot;TRI&quot; , &quot;&quot;)</formula>
        <label>Jnl Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>A value from the campaign that is linked to the opportunity (UUK-910)</description>
        <inlineHelpText>A value from the campaign that is linked to the opportunity. The campaign cause.</inlineHelpText>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The project from the campaign that is linked to the opportunity (UUK-910)</description>
        <inlineHelpText>The project from the campaign that is linked to the opportunity</inlineHelpText>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ST__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot; , TEXT(FLOOR(Total_Amount__c)) &amp; &quot;.&quot; &amp; lpad(text((round(Total_Amount__c,2)-floor(Total_Amount__c))*100),2,&quot;0&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Formula__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot;  , &quot;&quot;,  TEXT(FLOOR(Total_Amount__c)) &amp; &quot;.&quot; &amp;  lpad(text((round(Total_Amount__c,2)-floor(Total_Amount__c))*100),2,&quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>This is the total amount from the transactions that are included in this summary (UUK-910)</description>
        <inlineHelpText>This is the total amount from the transactions that are included in this summary</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Summary_Header__c</fullName>
        <description>This is a link to the header record that represents an export (UUK-910)</description>
        <label>Transaction Summary Header</label>
        <referenceTo>Transaction_Summary_Header__c</referenceTo>
        <relationshipLabel>Transaction Summaries</relationshipLabel>
        <relationshipName>Transaction_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VAT_Code_Formula__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot;  , &quot; &quot;,   VAT_Code__c )</formula>
        <label>VAT Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Code__c</fullName>
        <label>VAT Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Formula__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot; , &quot; &quot;, &quot;0.00&quot;)</formula>
        <label>VAT Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Total__c</fullName>
        <formula>IF( Group_ID__c == &quot;true&quot; , &quot;0.00&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Total</label>
        <type>Text</type>
    </fields>
    <label>Transaction Summary</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Transaction Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>